--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
     <MyAppTests>EnviormentTest.Tests</MyAppTests>
     <Configuration Condition="$(Configuration) == ''">Release</Configuration>
     <PublishProfile Condition="$(PublishProfile) == ''">Test</PublishProfile>
-    <OutputDir>out</OutputDir>
+    <OutputDir>.out</OutputDir>
     <Platform>AnyCPU</Platform>
     <NUnitConsole>packages\NUnit.Runners.2.6.1\tools\nunit-console.exe</NUnitConsole>
   </PropertyGroup>
@@ -88,7 +88,7 @@
     </ItemGroup>
 
     <Copy SourceFiles="@(OutputFiles)"
-      DestinationFiles="@(OutputFiles->'out\Package\%(RecursiveDir)%(Filename)%(Extension)')" />
+      DestinationFiles="@(OutputFiles->'.out\Package\%(RecursiveDir)%(Filename)%(Extension)')" />
   </Target>
 
   <!--<Import Project="Webapplication.csproj" />-->
